--- a/index.html
+++ b/index.html
@@ -8,3 +8,7 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_1/a1_lesson_4_2_1/a1_lesson_4_2_1.html">a1_lesson_4_2_1</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_2/a1_slides_4_2_2/a1_slides_4_2_2.html">a1_slides_4_2_2</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_2/a1_lesson_4_2_2/a1_lesson_4_2_2.html">a1_lesson_4_2_2</a></div>
+
