--- a/index.html
+++ b/index.html
@@ -12,3 +12,11 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_2/a1_lesson_4_2_2/a1_lesson_4_2_2.html">a1_lesson_4_2_2</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_slides_4_2_3/a1_slides_4_2_3.html">a1_slides_4_2_3</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_scaffold_4_2_3/a1_scaffold_4_2_3.html">a1_scaffold_4_2_3</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_lesson_4_2_3/a1_lesson_4_2_3.html">a1_lesson_4_2_3</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_quiz_4_2_3/a1_quiz_4_2_3.html">a1_quiz_4_2_3</a></div>
+
