--- a/index.html
+++ b/index.html
@@ -20,3 +20,11 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_quiz_4_2_3/a1_quiz_4_2_3.html">a1_quiz_4_2_3</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_slides_7_1_1/a1_slides_7_1_1.html">a1_slides_7_1_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_explainGCF_7_1_1/a1_explainGCF_7_1_1.html">a1_explainGCF_7_1_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_explainSimplifyFraction_7_1_1/a1_explainSimplifyFraction_7_1_1.html">a1_explainSimplifyFraction_7_1_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_lesson_7_1_1/a1_lesson_7_1_1.html">a1_lesson_7_1_1</a></div>
+
