--- a/index.html
+++ b/index.html
@@ -28,3 +28,9 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_lesson_7_1_1/a1_lesson_7_1_1.html">a1_lesson_7_1_1</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_2/a1_slides_7_1_2/a1_slides_7_1_2.html">a1_slides_7_1_2</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_2/a1_explainMultiplyMonomials_7_1_2/a1_explainMultiplyMonomials_7_1_2.html">a1_explainMultiplyMonomials_7_1_2</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_2/a1_lesson_7_1_2/a1_lesson_7_1_2.html">a1_lesson_7_1_2</a></div>
+
