--- a/index.html
+++ b/index.html
@@ -38,3 +38,23 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_3/a1_lesson_7_1_3/a1_lesson_7_1_3.html">a1_lesson_7_1_3</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_4/a1_slides_7_1_4/a1_slides_7_1_4.html">a1_slides_7_1_4</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_4/a1_lesson_7_1_4/a1_lesson_7_1_4.html">a1_lesson_7_1_4</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_5/a1_slides_7_1_5/a1_slides_7_1_5.html">a1_slides_7_1_5</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_5/a1_lesson_7_1_5/a1_lesson_7_1_5.html">a1_lesson_7_1_5</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_5/a1_quiz1_7_1_5/a1_quiz1_7_1_5.html">a1_quiz1_7_1_5</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_1/a1_factoringTreePractice_7_2_1/a1_factoringTreePractice_7_2_1.html">a1_factoringTreePractice_7_2_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_1/a1_slides_7_2_1/a1_slides_7_2_1.html">a1_slides_7_2_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_1/a1_lesson_7_2_1/a1_lesson_7_2_1.html">a1_lesson_7_2_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_2/a1_slides_7_2_2/a1_slides_7_2_2.html">a1_slides_7_2_2</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_2/a1_lesson_7_2_2/a1_lesson_7_2_2.html">a1_lesson_7_2_2</a></div>
+
