--- a/index.html
+++ b/index.html
@@ -58,3 +58,13 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_2/a1_lesson_7_2_2/a1_lesson_7_2_2.html">a1_lesson_7_2_2</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_3/a1_slides_7_2_3/a1_slides_7_2_3.html">a1_slides_7_2_3</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_3/a1_lesson_7_2_3/a1_lesson_7_2_3.html">a1_lesson_7_2_3</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_1/a1_slides_8_1_1/a1_slides_8_1_1.html">a1_slides_8_1_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_1/a1_cardSort_8_1_1/a1_cardSort_8_1_1.html">a1_cardSort_8_1_1</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_1/a1_lesson_8_1_1/a1_lesson_8_1_1.html">a1_lesson_8_1_1</a></div>
+
