--- a/index.html
+++ b/index.html
@@ -68,3 +68,7 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_1/a1_lesson_8_1_1/a1_lesson_8_1_1.html">a1_lesson_8_1_1</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_2/a1_slides_8_1_2/a1_slides_8_1_2.html">a1_slides_8_1_2</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_2/a1_lesson_8_1_2/a1_lesson_8_1_2.html">a1_lesson_8_1_2</a></div>
+
