--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_1_1/a1_lesson_4_1_1/a1_lesson_4_1_1.html">a1_lesson_4_1_1</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_1_2/a1_slides_4_1_2/a1_slides_4_1_2.html">a1_slides_4_1_2</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_1_2/a1_lesson_4_1_2/a1_lesson_4_1_2.html">a1_lesson_4_1_2</a></div>
-
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_1/a1_slides_4_2_1/a1_slides_4_2_1.html">a1_slides_4_2_1</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_1/a1_lesson_4_2_1/a1_lesson_4_2_1.html">a1_lesson_4_2_1</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_2/a1_slides_4_2_2/a1_slides_4_2_2.html">a1_slides_4_2_2</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_2/a1_lesson_4_2_2/a1_lesson_4_2_2.html">a1_lesson_4_2_2</a></div>
-
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_slides_4_2_3/a1_slides_4_2_3.html">a1_slides_4_2_3</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_scaffold_4_2_3/a1_scaffold_4_2_3.html">a1_scaffold_4_2_3</a></div>
 
@@ -20,29 +12,19 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson4_2_3/a1_quiz_4_2_3/a1_quiz_4_2_3.html">a1_quiz_4_2_3</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_slides_7_1_1/a1_slides_7_1_1.html">a1_slides_7_1_1</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_explainGCF_7_1_1/a1_explainGCF_7_1_1.html">a1_explainGCF_7_1_1</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_explainSimplifyFraction_7_1_1/a1_explainSimplifyFraction_7_1_1.html">a1_explainSimplifyFraction_7_1_1</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_1/a1_lesson_7_1_1/a1_lesson_7_1_1.html">a1_lesson_7_1_1</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_2/a1_slides_7_1_2/a1_slides_7_1_2.html">a1_slides_7_1_2</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_2/a1_explainMultiplyMonomials_7_1_2/a1_explainMultiplyMonomials_7_1_2.html">a1_explainMultiplyMonomials_7_1_2</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_2/a1_lesson_7_1_2/a1_lesson_7_1_2.html">a1_lesson_7_1_2</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_3/a1_slides_7_1_3/a1_slides_7_1_3.html">a1_slides_7_1_3</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_3/a1_lesson_7_1_3/a1_lesson_7_1_3.html">a1_lesson_7_1_3</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_4/a1_slides_7_1_4/a1_slides_7_1_4.html">a1_slides_7_1_4</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_4/a1_lesson_7_1_4/a1_lesson_7_1_4.html">a1_lesson_7_1_4</a></div>
-
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_5/a1_slides_7_1_5/a1_slides_7_1_5.html">a1_slides_7_1_5</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_1_5/a1_lesson_7_1_5/a1_lesson_7_1_5.html">a1_lesson_7_1_5</a></div>
 
@@ -50,25 +32,17 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_1/a1_factoringTreePractice_7_2_1/a1_factoringTreePractice_7_2_1.html">a1_factoringTreePractice_7_2_1</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_1/a1_slides_7_2_1/a1_slides_7_2_1.html">a1_slides_7_2_1</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_1/a1_lesson_7_2_1/a1_lesson_7_2_1.html">a1_lesson_7_2_1</a></div>
-
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_2/a1_slides_7_2_2/a1_slides_7_2_2.html">a1_slides_7_2_2</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_2/a1_lesson_7_2_2/a1_lesson_7_2_2.html">a1_lesson_7_2_2</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_3/a1_slides_7_2_3/a1_slides_7_2_3.html">a1_slides_7_2_3</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson7_2_3/a1_lesson_7_2_3/a1_lesson_7_2_3.html">a1_lesson_7_2_3</a></div>
-
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_1/a1_slides_8_1_1/a1_slides_8_1_1.html">a1_slides_8_1_1</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_1/a1_cardSort_8_1_1/a1_cardSort_8_1_1.html">a1_cardSort_8_1_1</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_1/a1_lesson_8_1_1/a1_lesson_8_1_1.html">a1_lesson_8_1_1</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_2/a1_slides_8_1_2/a1_slides_8_1_2.html">a1_slides_8_1_2</a></div>
-
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_2/a1_lesson_8_1_2/a1_lesson_8_1_2.html">a1_lesson_8_1_2</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_lesson_4_2_2/a1_lesson_4_2_2.html">a1_lesson_4_2_2</a></div>
 
