--- a/index.html
+++ b/index.html
@@ -46,3 +46,5 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_lesson_4_2_2/a1_lesson_4_2_2.html">a1_lesson_4_2_2</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_slides_4_2_2/a1_slides_4_2_2.html">a1_slides_4_2_2</a></div>
+
