--- a/index.html
+++ b/index.html
@@ -52,3 +52,7 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_3/a1_lesson_Q4_4_3/a1_lesson_Q4_4_3.html">a1_lesson_Q4_4_3</a></div>
 
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_slides_Q4_4_2/a1_slides_Q4_4_2.html">a1_slides_Q4_4_2</a></div>
+
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_lesson_Q4_4_2/a1_lesson_Q4_4_2.html">a1_lesson_Q4_4_2</a></div>
+
