--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lesson8_1_2/a1_lesson_8_1_2/a1_lesson_8_1_2.html">a1_lesson_8_1_2</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_slides_Q4_2_2/a1_slides_Q4_2_2.html">a1_slides_Q4_2_2</a></div>
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_slides_Q4_4_2/a1_slides_Q4_4_2.html">a1_slides_Q4_4_2</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_lesson_Q4_2_2/a1_lesson_Q4_2_2.html">a1_lesson_Q4_2_2</a></div>
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_lesson_Q4_4_2/a1_lesson_Q4_4_2.html">a1_lesson_Q4_4_2</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_3/a1_slides_Q4_4_3/a1_slides_Q4_4_3.html">a1_slides_Q4_4_3</a></div>
 
 <div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_3/a1_lesson_Q4_4_3/a1_lesson_Q4_4_3.html">a1_lesson_Q4_4_3</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_slides_Q4_4_2/a1_slides_Q4_4_2.html">a1_slides_Q4_4_2</a></div>
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_4/a1_slides_4_4_4/a1_slides_4_4_4.html">a1_slides_4_4_4</a></div>
 
-<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_2/a1_lesson_Q4_4_2/a1_lesson_Q4_4_2.html">a1_lesson_Q4_4_2</a></div>
+<div><a href="https://quimt.github.io/2425wwwLP/algebra1/lessonQ4_4_4/a1_lesson_4_4_4/a1_lesson_4_4_4.html">a1_lesson_4_4_4</a></div>
 
